# bazel-libs

./: BUILD.bazel  README.md  WORKSPACE
constraints/: BUILD.bazel
internal/: BUILD.bazel  cc.bzl  repo.bzl
zlib/: BUILD.bazel  deps.bzl  zconf-extra.h  zlib.BUILD  zlib_test.c
